# Phising-URLs-Classification

./: .gitignore  .pdm-python  README.md  app.py  check_paths.py  model_download.txt  pyproject.toml  requirements.txt
models/canine_phishing/: config.json  models_download.txt
models/ft_transformer_model/: config.yml
models/tabnet_model/: config.yml
